fixed h5 showing on tablet

--- a/client/src/app/components/home/home.component.scss
+++ b/client/src/app/components/home/home.component.scss
@@ -116,11 +116,3 @@ main {
         // }
     }
 }
-
-@media only screen and (max-height: 60rem) {
-    .row2 {
-        h5 {
-            display: none;
-        }
-    }
-}
